--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^4.0.4
+  velocity_x: ^3.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
